# solas-trace

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  mkdocs.yml  package-lock.json  run.ps1
crates/engine/: Cargo.toml  Dockerfile
crates/engine/src/: db.rs  ee.rs  handlers.rs  lib.rs  main.rs  proxy.rs  rate_limit.rs
crates/engine/tests/: heavy_load_test.rs  integration_tests.rs
crates/engine/tests/db/: mod.rs  test_client.rs  test_sqlite_migrate.rs
crates/engine/tests/deploy/: mod.rs  test_docker_compose.rs
crates/engine/tests/rest/: mod.rs  test_ee_rbac.rs  test_proxy.rs  test_rate_limit.rs
crates/engine/tests/tmux_tools/: mod.rs  test_launcher.rs
crates/engine/tests/worker/: mod.rs  test_otel_transform.rs
dev_tools/launcher/: __init__.py  default.conf  launcher.py  schema.py  tmux.py
dev_tools/scripts/: build_images.sh  dev_launcher.py  start_release.sh  sync_public_openapi.py
docs/: architecture.md  index.md
docs/ai-agent/: byok.md  github-integration.md  overview.md  pr-creation.md  root-cause-analysis.md  trace-analysis.md
docs/cli/: get-started.md
docs/detectors/: alerts.md  get-started.md  introduction.md
docs/developer/: self-hosting.md
docs/getting-started/: introduction.md  quickstart.md
docs/integrations/: agno.md  anthropic.md  autogen.md  claude-agent-sdk.md  crewai.md  dspy.md  gemini.md  (+14 more)
examples/: README.md  anthropic_proxy_example.py  crewai_simulation.py  langchain_otlp_example.py  openai_agent_react.py
examples/rust/01_openai_proxy/: Cargo.toml  README.md
examples/rust/01_openai_proxy/src/: main.rs
examples/rust/claude_agent_sdk/: Cargo.toml  README.md
examples/rust/claude_agent_sdk/src/: main.rs
prisma/: schema.prisma
ui/: Dockerfile  index.html  next.config.js  package-lock.json  package.json
(+469 files in other folders)
